# rootsacademy-k8s-exercise

./: .gitignore  README.md
.solutions/1-exercise/: my-webserver-pod.yaml
.solutions/2-exercise/: my-webserver-deployment.yaml
.solutions/3-exercise/: service.yaml
1-exercise/: README.md
2-exercise/: README.md
3-exercise/: README.md
4-exercise/: README.md  echo-pod.yaml
my-webserver/: Dockerfile  pyproject.toml  run.py
my-webserver/my_webserver/: webserver_app.py
my-webserver/my_webserver/templates/: page.html
