[tool.poetry]
name = "my-webserver"
version = "0.1.0"
description = ""
authors = ["Nico"]
packages = [{include = "my_webserver"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
Jinja2 = "^3.1.2"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
